# hype

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TEST_READY.md  pyproject.toml  pytest.ini
.serena/: project.yml
config/: base.yaml  paper_trading.yaml  shadow_5h_test.yaml  shadow_mainnet.yaml  shadow_test.yaml  signals.yaml  verification_test.yaml  week1.5_hybrid.yaml  week1_ioc.yaml
docs/: DAY7_VALIDATION_REPORT.md  TESTING.md  architecture_design.md  data_collection_replay_guide.md  day2_dynamic_cost_estimator_integration.md  hybrid_strategy_design.md  multiwindow_ic_analysis_corrected.md  progress.md  revised_roadmap.md  shadow_test_guide.md  strategy_review.md  week1.5_config_summary.md  week1.5_integration_complete.md  week1_baseline_report.md  week1_strategy_reassessment.md
docs/guides/: 5h_test_guide.md  shadow_test_guide.md
docs/reports/: ic_robustness_report.html  ic_robustness_report.txt
scripts/: analyze_data_quality.py  analyze_shadow_results.py  collect_market_data.py  diagnose_signal_return_correlation.py  monitor_5h_test.sh  monitor_paper_trading.sh  quick_signal_validation.py  run_backtest.py  run_paper_trading_1h.sh  run_shadow_trading.py  run_tests.sh  simple_backtest_demo.py  start_trading.py  test_mainnet_connection.py  validate_ic_robustness.py  validate_initialization.py  validate_system.py  verify_imports.py  verify_logging.py
src/: main.py  main_week1_backup.py
src/analytics/: __init__.py  adaptive_cost_estimator.py  alpha_health_checker.py  dynamic_cost_estimator.py  future_return_tracker.py  ic_validator.py  live_monitor.py  maker_fill_rate_monitor.py  market_state_detector.py  metrics.py  pnl_attribution.py  shadow_analyzer.py
src/core/: config.py  constants.py  data_feed.py  data_replay.py  data_source.py  incremental_saver.py  logging.py  orderbook.py  types.py
src/execution/: __init__.py  fill_simulator.py  hybrid_executor.py  ioc_executor.py  limit_executor.py  order_manager.py  order_router.py  position_closer.py  shadow_executor.py  shadow_order_router.py  shallow_maker_executor.py  signal_classifier.py  signal_deduplicator.py  slippage_estimator.py
src/hyperliquid/: api_client.py  websocket_client.py
src/risk/: __init__.py  hard_limits.py  position_lifecycle.py  position_manager.py  shadow_position_manager.py  tp_sl_manager.py
src/signals/: __init__.py  aggregator.py  base.py  impact.py  microprice.py  obi.py
tests/: conftest.py
tests/integration/: conftest.py  test_cost_estimation_scenarios.py  test_position_lifecycle.py  test_trading_flow.py
tests/unit/: test_adaptive_cost_estimator.py  test_alpha_health_checker.py  test_analytics.py  test_core.py  test_dynamic_cost_estimator.py  test_execution.py  test_hybrid_executor.py  test_hyperliquid.py  test_logging.py  test_main.py  test_main_simple.py  test_maker_fill_rate_monitor.py  test_market_state_detector.py  test_position_closer.py  test_position_manager.py  test_risk.py  test_shallow_maker_executor.py  test_signal_classifier.py  test_signal_deduplicator.py  (+7 more)
(+5 files in other folders)
